# ffi-bbs-signatures

./: .gitignore  CHANGELOG.md  README.md  package.json
.circleci/: config.yml
__tests__/bbsSignature/: blindSign.bbsSignature.spec.ts  commitmentForBlindSign.bbsSignature.spec.ts  sign.bbsSignature.spec.ts  verify.bbsSignature.spec.ts
docs/: index.html
docs/api/: index.html  modules.html
docs/api/assets/: search.js
docs/api/interfaces/: BbsBlindSignContext.html  BbsBlindSignContextRequest.html  BbsBlindSignRequest.html  BbsCreateProofRequest.html  BbsKeyPair.html  BbsSignRequest.html  BbsVerifyBlindSignContextRequest.html  BbsVerifyProofRequest.html  BbsVerifyRequest.html  BbsVerifyResult.html  BlindedBlsKeyPair.html  Bls12381ToBbsRequest.html  BlsBbsSignRequest.html  BlsBbsVerifyRequest.html  BlsKeyPair.html
native/: Cargo.toml  build.rs
native/src/: java.rs  lib.rs  node.rs  rust_bbs.rs
native/src/node/: macros.rs
native/src/rust_bbs/: macros.rs
native/src/wrappers/: c.rs  java.rs  node.rs
native/src/wrappers/c/: macros.rs
native/src/wrappers/java/: macros.rs
native/src/wrappers/node/: macros.rs
scripts/: build.sh  c_test.sh  java_test.sh  linux_docker_build.sh
src/: bbsSignature.ts  bls12381.ts  bls12381toBbs.ts  index.ts  util.ts
src/types/: BbsBlindSignContextRequest.ts  BbsBlindSignRequest.ts  BlsBlindSignContextRequest.ts  BlsBlindSignRequest.ts  BlsVerifyBlindSignContextRequest.ts  BlsVerifyRequest.ts  index.ts
ssi-bbs-signatures/ssi/ffi_bbs_signatures/: .gitignore  README.md  (+3 more)
test/: neon-interface.spec.js
wrappers/c/: main.c
(+7 files in other folders)
