[package]
name = "ffi-bbs-signatures"
version = "0.1.0"
description = "A node wrapper for bbs-signatures"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "bbs"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["node"]
java = ["jni"]
node = ["neon"]
c = []

[build-dependencies]
neon-build = "0.10.1"
cbindgen = "0.24.3"

[dependencies]
arrayref = "0.3"
base64 = "0.13.0"
bbs = "0.4"
ffi-support = "0.4"
hkdf = "0.8"
jni = { version = "0.19", optional = true }
lazy_static = "1.4"
neon = { version = "0.10.1", optional = true }
pairing-plus = "0.19"
rand = "0.7"
serde = "1.0.138"
serde_json = "1.0.78"
sha2 = "0.8"
